# Resume-Consolidator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: pyproject.toml
backend/src/: api.py  extractor.py
backend/src/formatter/: pdf_renderer.py  prompt_builder.py  schema.json
backend/src/formatter/templates/: resume_template_continuation.html  resume_template_first_page.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FileUploader.jsx  Loader.jsx  ProgressStepper.jsx
frontend/src/theme/: components.css  theme.css
src/: App.jsx  index.css
src/components/: FileUploader.jsx  Loader.jsx  ProgressStepper.jsx
src/theme/: components.css  theme.css
